--- a/src/style.css
+++ b/src/style.css
@@ -23,7 +23,8 @@ body {
 
 .bg {
   animation:slide 3s ease-in-out infinite alternate;
-  background-image: linear-gradient(-60deg, rgb(163, 119, 210) 50%, rgb(187, 181, 190) 50%);
+  /* background-image: linear-gradient(-60deg, rgb(163, 119, 210) 50%, rgb(187, 181, 190) 50%); */
+  background-image: url('/AndWacky.png');
   bottom:0;
   left:-50%;
   opacity:.5;
